<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>
    <string name="header">My Nanodegree Apps!</string>

    <string name="appname_spotify">Spotify Streamer</string>
    <string name="appname_scores">Scores App</string>
    <string name="appname_library">Library App</string>
    <string name="appname_build">Build It Bigger</string>
    <string name="appname_xyz">XYZ Reader</string>
    <string name="appname_capstone">Capstone:My Own App</string>

    <string name="will_launch_message">This button will launch my %s app!</string>
</resources>
